--- a/scholarship-project/index.html
+++ b/scholarship-project/index.html
@@ -15,11 +15,11 @@
             </div>
             <div class="main-menu">
                 <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Scholarship</a></li>
-                    <li><a href="">University</a></li>
-                    <li><a href="">Major</a></li>
-                    <li><a href="">Contact us</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="scholarship_page.html">Scholarship</a></li>
+                    <li><a href="university_page.html">University</a></li>
+                    <li><a href="major_page.html">Major</a></li>
+                    <li><a href="contactus_page.html">Contact us</a></li>
                 </ul>
             </div>
             <div class="register">
@@ -138,14 +138,13 @@
                         <li><img src="image/achievement.png"></li>
                         <li><img src="image/achievement.png"></li>
                     </ul>
-
                 </div>
-
             </div>
-
+        </div>
+        <div class="footer">
+            <h2>Footer</h2>
         </div>
 
     </div>
-    
 </body>
 </html>
