--- a/scholarship-project/contactus_page.html
+++ b/scholarship-project/contactus_page.html
@@ -15,11 +15,11 @@
             </div>
             <div class="main-menu">
                 <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Scholarship</a></li>
-                    <li><a href="">University</a></li>
-                    <li><a href="">Major</a></li>
-                    <li><a href="">Contact us</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="scholarship_page.html">Scholarship</a></li>
+                    <li><a href="university_page.html">University</a></li>
+                    <li><a href="major_page.html">Major</a></li>
+                    <li><a href="contactus_page.html">Contact us</a></li>
                 </ul>
             </div>
             <div class="register">
@@ -33,6 +33,7 @@
         </div>
         <div class="footer">
             <h2>Footer</h2>
+            <p>Thanks You</p>
         </div>
     </div>
 </body>
