--- a/scholarship-project/index.html
+++ b/scholarship-project/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Goedu Cambodia</title>
     <link rel="stylesheet" href="style.css">
+    <a target="_blank" href="https://icons8.com/icon/118497/facebook"></a>
+    <a target="_blank" href="https://icons8.com/icon/19318/youtube"></a>
+    <a target="_blank" href="https://icons8.com/icon/13930/linkedin"></a>
 </head>
 <body>
     <div class="full-container">
@@ -142,7 +145,26 @@
             </div>
         </div>
         <div class="footer">
-            <h2>Footer</h2>
+            <!-- <h2>Footer</h2> -->
+            <div class="list-footer">
+                <ul>
+                    <li>© All right reserved by GoEdu Cambodia</li>
+                    <li>Stay Connected</li>
+                    <li>
+                        <img src="https://img.icons8.com/color/48/null/facebook-new.png"/>
+                    </li>
+                    <li>
+                        <img src="https://img.icons8.com/color/48/null/youtube-play.png"/>
+                    </li>
+                    <li>
+                        <img src="https://img.icons8.com/color/48/null/linkedin.png"/>
+                    </li>
+                    <li>
+
+                    </li>
+                </ul>
+
+            </div>
         </div>
 
     </div>
