--- a/scholarship-project/university_page.html
+++ b/scholarship-project/university_page.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Goedu Cambodia</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet"
+  href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 </head>
 <body>
     <div class="full-container">
@@ -31,6 +33,197 @@
                 </div>
             </div>
         </div>
+
+        <div class="uniPage_cover">
+            <img src="image/uni_page_cover_3.2.jpg">
+        </div>
+        <div class="search_school">
+            <!-- <i class='bx bxs-search-alt-2 bx-sm'></i> -->
+            <input type="text" placeholder="Search school name...">
+        </div>
+        <div class="public_uni">
+            <h>Public University</h>
+        </div>
+
+        <div class="uni_category">
+            <div class="uni_box">
+                <div class="inside-unibox"><a href="">
+                    <img src="image/CADT_uni.jpg">
+                    <p>Find Free education in cambodia</p>
+                </a>
+                </div>
+            </div>
+            <div class="uni_box">
+                <div class="inside-unibox">
+                    <img src="image/CADT_uni.jpg">
+                    <p>Find Free education in cambodia</p>
+                </div>
+            </div>
+            <div class="uni_box">
+                <div class="inside-unibox">
+                    <img src="image/CADT_uni.jpg">
+                    <p>Find Free education in cambodia</p>
+                </div>
+            </div>
+            <div class="uni_box">
+                <div class="inside-unibox">
+                    <img src="image/CADT_uni.jpg">
+                    <p>Find Free education in cambodia</p>
+                </div>
+            </div>
+            <div class="uni_box">
+                <div class="inside-unibox">
+                    <img src="image/CADT_uni.jpg">
+                    <p>Find Free education in cambodia</p>
+                </div>
+            </div>
+            <div class="uni_box">
+                <div class="inside-unibox">
+                    <img src="image/CADT_uni.jpg">
+                    <p>Find Free education in cambodia</p>
+                </div>
+            </div>
+            <div class="uni_box">
+                <div class="inside-unibox">
+                    <img src="image/CADT_uni.jpg">
+                    <p>Find Free education in cambodia</p>
+                </div>
+            </div>
+            <div class="uni_box">
+                <div class="inside-unibox">
+                    <img src="image/CADT_uni.jpg">
+                    <p>Find Free education in cambodia</p>
+                </div>
+            </div>
+            <div class="uni_box">
+                <div class="inside-unibox">
+                    <img src="image/CADT_uni.jpg">
+                    <p>Find Free education in cambodia</p>
+                </div>
+            </div>
+            <div class="uni_box">
+                <div class="inside-unibox">
+                    <img src="image/CADT_uni.jpg">
+                    <p>Find Free education in cambodia</p>
+                </div>
+            </div>
+            <div class="uni_box">
+                <div class="inside-unibox">
+                    <img src="image/CADT_uni.jpg">
+                    <p>Find Free education in cambodia</p>
+                </div>
+            </div>
+            <div class="uni_box">
+                <div class="inside-unibox">
+                    <img src="image/CADT_uni.jpg">
+                    <p>Find Free education in cambodia</p>
+                </div>
+            </div>
+            <div class="uni_box">
+                <div class="inside-unibox">
+                    <img src="image/CADT_uni.jpg">
+                    <p>Find Free education in cambodia</p>
+                </div>
+            </div>
+            <div class="uni_box">
+                <div class="inside-unibox">
+                    <img src="image/CADT_uni.jpg">
+                    <p>Find Free education in cambodia</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="private_uni">
+            <h>Private University</h>
+        </div>
+
+        <div class="uni_category">
+            <div class="uni_box">
+                <div class="inside-unibox">
+                    <img src="image/CADT_uni.jpg">
+                    <p>Find Free education in cambodia</p>
+                </div>
+            </div>
+            <div class="uni_box">
+                <div class="inside-unibox">
+                    <img src="image/CADT_uni.jpg">
+                    <p>Find Free education in cambodia</p>
+                </div>
+            </div>
+            <div class="uni_box">
+                <div class="inside-unibox">
+                    <img src="image/CADT_uni.jpg">
+                    <p>Find Free education in cambodia</p>
+                </div>
+            </div>
+            <div class="uni_box">
+                <div class="inside-unibox">
+                    <img src="image/CADT_uni.jpg">
+                    <p>Find Free education in cambodia</p>
+                </div>
+            </div>
+            <div class="uni_box">
+                <div class="inside-unibox">
+                    <img src="image/CADT_uni.jpg">
+                    <p>Find Free education in cambodia</p>
+                </div>
+            </div>
+            <div class="uni_box">
+                <div class="inside-unibox">
+                    <img src="image/CADT_uni.jpg">
+                    <p>Find Free education in cambodia</p>
+                </div>
+            </div>
+            <div class="uni_box">
+                <div class="inside-unibox">
+                    <img src="image/CADT_uni.jpg">
+                    <p>Find Free education in cambodia</p>
+                </div>
+            </div>
+            <div class="uni_box">
+                <div class="inside-unibox">
+                    <img src="image/CADT_uni.jpg">
+                    <p>Find Free education in cambodia</p>
+                </div>
+            </div>
+            <div class="uni_box">
+                <div class="inside-unibox">
+                    <img src="image/CADT_uni.jpg">
+                    <p>Find Free education in cambodia</p>
+                </div>
+            </div>
+            <div class="uni_box">
+                <div class="inside-unibox">
+                    <img src="image/CADT_uni.jpg">
+                    <p>Find Free education in cambodia</p>
+                </div>
+            </div>
+            <div class="uni_box">
+                <div class="inside-unibox">
+                    <img src="image/CADT_uni.jpg">
+                    <p>Find Free education in cambodia</p>
+                </div>
+            </div>
+            <div class="uni_box">
+                <div class="inside-unibox">
+                    <img src="image/CADT_uni.jpg">
+                    <p>Find Free education in cambodia</p>
+                </div>
+            </div>
+            <div class="uni_box">
+                <div class="inside-unibox">
+                    <img src="image/CADT_uni.jpg">
+                    <p>Find Free education in cambodia</p>
+                </div>
+            </div>
+            <div class="uni_box">
+                <div class="inside-unibox">
+                    <img src="image/CADT_uni.jpg">
+                    <p>Find Free education in cambodia</p>
+                </div>
+            </div>
+        </div>
+
         <div class="footer">
             <h2>Footer</h2>
         </div>
