--- a/scholarship-project/university_page.html
+++ b/scholarship-project/university_page.html
@@ -44,10 +44,10 @@
         <div class="public_uni">
             <h>Public University</h>
         </div>
-
+        
         <div class="uni_category">
             <div class="uni_box">
-                <div class="inside-unibox"><a href="">
+                <div class="inside-unibox"><a href="cadt_uni.html">
                     <img src="image/CADT_uni.jpg">
                     <p>Find Free education in cambodia</p>
                 </a>
