--- a/scholarship-project/index.html
+++ b/scholarship-project/index.html
@@ -82,6 +82,7 @@
             </div>
         </div>
         </div>
+        <div class="main_content">
         <div class="text-content-1">
         <pre>                               START HERE       
                                     Easy to find scholarship 
@@ -144,6 +145,7 @@
                 </div>
             </div>
         </div>
+    </div>
         <div class="footer">
             <!-- <h2>Footer</h2> -->
             <div class="list-footer">
