--- a/scholarship-project/major_page.html
+++ b/scholarship-project/major_page.html
@@ -31,6 +31,89 @@
                 </div>
             </div>
         </div>
+
+        <div class="major_page_cover">
+            <img src="image/major_page_cover.jpg">
+        </div>
+
+        <div class="header">
+            <h>
+                Learn more about about what  the major is the right choice for you  
+            </h>
+        </div>
+        <div class="major_gallery">
+            <div class="gallery">
+                <div class="inside_gallery">
+                    <img src="image/ux.png">
+                    <p>Computer Science</p>
+                    <p>Coding, Thinking</p>
+                </div>
+            </div>
+            <div class="gallery">
+                <div class="inside_gallery">
+                    <img src="image/ux.png">
+                    <p>Computer Science</p>
+                    <p>Coding, Thinking</p>
+                </div>
+            </div>
+            <div class="gallery">
+                <div class="inside_gallery">
+                    <img src="image/ux.png">
+                    <p>Computer Science</p>
+                    <p>Coding, Thinking</p>
+                </div>
+            </div>
+            <div class="gallery">
+                <div class="inside_gallery">
+                    <img src="image/ux.png">
+                    <p>Computer Science</p>
+                    <p>Coding, Thinking</p>
+                </div>
+            </div>
+            <div class="gallery">
+                <div class="inside_gallery">
+                    <img src="image/ux.png">
+                    <p>Computer Science</p>
+                    <p>Coding, Thinking</p>
+                </div>
+            </div>
+            <div class="gallery">
+                <div class="inside_gallery">
+                    <img src="image/ux.png">
+                    <p>Computer Science</p>
+                    <p>Coding, Thinking</p>
+                </div>
+            </div>
+            <div class="gallery">
+                <div class="inside_gallery">
+                    <img src="image/ux.png">
+                    <p>Computer Science</p>
+                    <p>Coding, Thinking</p>
+                </div>
+            </div>
+            <div class="gallery">
+                <div class="inside_gallery">
+                    <img src="image/ux.png">
+                    <p>Computer Science</p>
+                    <p>Coding, Thinking</p>
+                    
+                </div>
+            </div>
+            <div class="gallery">
+                <div class="inside_gallery">
+                    <img src="image/ux.png">
+                    <p>Computer Science</p>
+                    <p>Coding, Thinking</p>
+                </div>
+            </div>
+            <div class="gallery">
+                <div class="inside_gallery">
+                    <img src="image/ux.png">
+                    <p>Computer Science</p>
+                    <p>Coding, Thinking</p>
+                </div>
+            </div>
+        </div>
         <div class="footer">
             <h2>Footer</h2>
         </div>
