--- a/scholarship-project/index.html
+++ b/scholarship-project/index.html
@@ -126,7 +126,7 @@
             </div>
 
         </div>
-        <div class="join">
+        <!-- <div class="join">
             <h2>Join with us</h2>
         </div>
         <div class="content-2">
@@ -147,8 +147,8 @@
         </div>
     </div>
         <div class="footer">
-            <!-- <h2>Footer</h2> -->
-            <div class="list-footer">
+            <h2>Footer</h2> 
+                <div class="list-footer">
                 <ul>
                     <li>© All right reserved by GoEdu Cambodia</li>
                     <li>Stay Connected</li>
@@ -167,8 +167,81 @@
                 </ul>
 
             </div>
+        </div>  -->
+        <div class="content-aboutus">
+            <h4> What is GoEdu Cambodia?</h4>
+            <div class="content-aboutus-img">
+                <img src="image/Live-collaboration-cuate.png">
+            </div>
+            <div class="content-aboutus-img-text">
+                <p>
+                    GoEdu Cambodia is an online platform 
+                    that shares students  the informations about scholarship , university to study and major learning. 
+                </p>
+            </div>
         </div>
-
+        <div class="how-it-works"> 
+            <h1> <strong>How GoEdu  Cambodia helps you</strong></h1>
+            <div class=how-it-works-p1>
+                <div class="number">
+                    <button> 1 </button>
+                </div>
+                <div class="text">
+                    <p> Create your profile. </p>
+                </div>
+            </div>
+            <div class=how-it-works-p2>
+                <div class="number">
+                    <button> 2 </button>
+                </div>
+                <div class="text">
+                    <p> Scholarship match up with your interest. </p>
+                </div>
+            </div>
+            <div class=how-it-works-p3>
+                <div class="number">
+                    <button> 3 </button>
+                </div>
+                <div class="text">
+                    <p> Apply for your interesting scholarship. </p>
+                </div>
+            </div>
+        </div>
+        <div class="sponsorship"> 
+            <h2> Our Partners:</h2>
+            <div class="sponsorship-partner">
+                <a href="https://asean.org/" target="_blank"> <img class="asean" src="image/asean.png"> </a>
+                <a href="https://elearning.moeys.gov.kh/" target="_blank"> <img class="moeys" src="image/moeys.png"> </a>
+                <a href="https://www.cadt.edu.kh/" target="_blank"> <img class="cadt" src="image/cadt.png"> </a>
+                <a href="https://mptc.gov.kh/en/" target="_blank"> <img class="mptc" src="image/mptc.png"> </a>
+                <a href="https://www.usaid.gov/" tartget="_blank"> <img class="usaid" src="image/usaid.png"> </a>
+            </div>
+        </div>
+        <div class="below-content"> <!-- Creating a box for keep our page contact-->
+            <div class="below-content-logo">
+                <div class="below-content-logo-img">
+                    <img class="below-content-logo-img-pic" src="image/goedu-logo.png">
+                </div>
+                <div class="below-content-logo-text"> 
+                    <p> GoEdu Cambodia </p>
+                </div>
+            </div>
+            <div class="address">
+                <p> ADDRESS <br>
+                <a href="https://www.google.com/maps/place/Cambodia+Academy+of+Digital+Technology/@11.6530651,104.9095057,17z/data=!3m1!4b1!4m5!3m4!1s0x3109516bdea989b3:0x372d2c5e0e14b706!8m2!3d11.6530599!4d104.9116944" target="_blank">
+                <span class="googlemap"> Bridge 2, National Road 6A, Sangkat Prek Leap, Khan Chroy Changva, Phnom Penh </span> </a> </p>
+            </div>
+            <div class="policy">
+                <p>GoEdu Cambodia @ 2022 All Rights Reserved</p>
+            </div>
+            <div class="contact">
+                <i class="fa-brands fa-facebook fa-3x"></i>
+                <i class="fa-brands fa-telegram fa-3x"></i>
+                <i class="fa-brands fa-linkedin fa-3x"></i>
+                <i class="fa-brands fa-instagram fa-3x"></i>
+                <i class="fa-brands fa-twitter fa-3x"></i>
+            </div>
+        </div>
     </div>
 </body>
 </html>
