--- a/scholarship-project/cadt_uni.html
+++ b/scholarship-project/cadt_uni.html
@@ -31,9 +31,26 @@
                 </div>
             </div>
         </div>
+        <div class="cadt_uni_cover">
+            <img src="image/cadt_cover1.jpg">
+        </div>
         <div class="uni-name">
-            <h><b>Cambodia Academy of Digital Technology</b></h>
-
+            <h>Cambodia Academy of Digital Technology</h>
+        </div>
+        <div class="uni_content_left">
+            <div class="cadt_page_menu">
+                <ul>
+                    <li>Overview</li>
+                    <li>Tuition Fees</li>
+                    <li>Programs</li>
+                    <li>Scholarship</li>
+                </ul>
+            </div>
+        </div>
+        <div class="uni_content_right">
+            <div class="shool_logo">
+                <img src="image/cadt.png"><hr>
+            </div>
         </div>
         <div class="footer">
             <h2>Footer</h2>
