--- a/scholarship-project/university_page.html
+++ b/scholarship-project/university_page.html
@@ -49,7 +49,7 @@
             <div class="uni_box">
                 <div class="inside-unibox"><a href="cadt_uni.html">
                     <img src="image/CADT_uni.jpg">
-                    <p>Find Free education in cambodia</p>
+                    <p>Cambodia Academy of Digital Technology</p>
                 </a>
                 </div>
             </div>
