--- a/scholarship-project/university_page.html
+++ b/scholarship-project/university_page.html
@@ -36,6 +36,7 @@
 
         <div class="uniPage_cover">
             <img src="image/uni_page_cover_3.2.jpg">
+            <p>Discover more about the university before decide what is the best for you</p>
         </div>
         <div class="search_school">
             <!-- <i class='bx bxs-search-alt-2 bx-sm'></i> -->
