--- a/scholarship-project/university_page.html
+++ b/scholarship-project/university_page.html
@@ -55,45 +55,52 @@
                 </div>
             </div>
             <div class="uni_box">
-                <div class="inside-unibox">
-                    <img src="image/CADT_uni.jpg">
-                    <p>Find Free education in cambodia</p>
+                <div class="inside-unibox"><a href="techno_uni.html">
+                    <img src="image/techno_uni.jpg">
+                    <p>Institute of Technology Cambodia</p>
+                </a>
                 </div>
             </div>
             <div class="uni_box">
-                <div class="inside-unibox">
-                    <img src="image/CADT_uni.jpg">
-                    <p>Find Free education in cambodia</p>
+                <div class="inside-unibox"><a href="rupp_uni.html">
+                    <img src="image/rupp-cover1.jpg">
+                    <p>Royal University of Phnom Penh</p>
+                </a>
                 </div>
             </div>
             <div class="uni_box">
-                <div class="inside-unibox">
-                    <img src="image/CADT_uni.jpg">
-                    <p>Find Free education in cambodia</p>
+                <div class="inside-unibox"><a href="npic_uni.html">
+                    <img src="image/npic-uni.jpg">
+                    <p>National Polytechnic Institute of Cambodia</p>
+                    </a>
                 </div>
             </div>
             <div class="uni_box">
-                <div class="inside-unibox">
-                    <img src="image/CADT_uni.jpg">
-                    <p>Find Free education in cambodia</p>
+                <div class="inside-unibox"><a href="ntti_uni.html">
+                    <img src="image/ntti-uni.jpg">
+                    <p>National Technical Training Institute (NTTI)</p>
+                    </a>
                 </div>
             </div>
             <div class="uni_box">
-                <div class="inside-unibox">
-                    <img src="image/CADT_uni.jpg">
-                    <p>Find Free education in cambodia</p>
+                <div class="inside-unibox"><a href="num_uni.html">
+                    <img src="image/num-uni.jpg">
+                    <p>National University of Management</p>
+                </a>
                 </div>
             </div>
             <div class="uni_box">
-                <div class="inside-unibox">
-                    <img src="image/CADT_uni.jpg">
-                    <p>Find Free education in cambodia</p>
+                <div class="inside-unibox"><a href="rufa_uni.html">
+                    <img src="image/rufa-uni.jpg">
+                    <p>Royal University of Fine Arts</p>
+                </a>
                 </div>
             </div>
             <div class="uni_box">
-                <div class="inside-unibox">
-                    <img src="image/CADT_uni.jpg">
+                <div class="inside-unibox"><a href="rule_uni.html">
+                    <img src="image/rule-uni.jpg">
                     <p>Find Free education in cambodia</p>
+                </a>
                 </div>
             </div>
             <div class="uni_box">
