--- a/scholarship-project/rupp_uni.html
+++ b/scholarship-project/rupp_uni.html
@@ -33,35 +33,21 @@
         </div>
         <div class="uni_container">
         <div class="cadt_uni_cover">
-            <img src="image/idt-building.jpg">
+            <img src="image/rupp-uni.jpg">
         </div>
         <div class="uni-name">
-            <h>Cambodia Academy of Digital Technology</h>
+            <h>Royal University of Phnom Penh</h>
         </div>
         <div class="full_content">
             <div class="shool_info">
                 <ul>
-                    <li><img src="image/cadt_logo_n.png"></li>
-                    <li>School Website<br><a href="https://www.cadt.edu.kh/">https://www.cadt.edu.kh/</a></li>
-                    <li>Phone number<br>010 340 000</li>
-                    <li>Email<br>idt@cadt.edu.kh</li>
-                    <li>Address<br><address><a href="https://www.google.com/maps/place/Cambodia+Academy+of+Digital+Technology/@11.654289,104.9069382,17z/data=!4m5!3m4!1s0x0:0x372d2c5e0e14b706!8m2!3d11.6530599!4d104.9116944">National Road 6A, Kthor, Prek Leap ChroyChangvar, Phnom Penh</a></address>
+                    <li><img src="image/RUPP.png" style="width: 80px;"></li>
+                    <li>School Website<br><a href="http://www.rupp.edu.kh/">http://www.rupp.edu.kh/</a></li>
+                    <li>Phone number<br>855-23-883-640</li>
+                    <li>Email<br>info@itc.edu.kh</li>
+                    <li>Address<br><address><a href="https://www.google.com/maps/place/RUPP+(Royal+University+of+Phnom+Penh)/@11.5682919,104.89069,15z/data=!4m5!3m4!1s0x0:0x20138e822e434660!8m2!3d11.5682919!4d104.89069">Russian Federation Boulevard, Toul Kork, Phnom Penh, Cambodia.</a></address>
                     </li>
                 </ul>
-                  <!-- <div class="shool_info">
-                    <img src="image/cadt.png"><hr>
-                    <b>School name</b>
-                    <p>បណ្ឌិតសភាបច្ចេកវិទ្យាឌីជីថលកម្ពុជា</p>
-                    <p>Cambodia Academy of Digital Technology</p>
-                    <b>School website</b><br>
-                    <a href="https://www.cadt.edu.kh/">https://www.cadt.edu.kh/</a><br>
-                    <b>Phone number</b>
-                    <p>010 340 000</p>
-                    <b>Email</b>
-                    <p>idt@cadt.edu.kh</p>
-                    <address><a href="https://www.google.com/maps/place/Cambodia+Academy+of+Digital+Technology/@11.654289,104.9069382,17z/data=!4m5!3m4!1s0x0:0x372d2c5e0e14b706!8m2!3d11.6530599!4d104.9116944">National Road 6A, Kthor, Prek Leap ChroyChangvar, Phnom Penh</a></address>
-                 -->
-
                 </div>
         <div class="uni_content_left">
             <div class="tabs">
@@ -72,7 +58,7 @@
             </div>
             <div class="tab-content">
                 <div class="tabs__tab active" id="tab_1" data-tab-info>
-                    <p>CADT is a national flagship research and education institution for Digital Technology and Innovation, nurturing digital talent and innovators to drive Cambodia toward a digital society. </p>
+                    <p>The Royal University of Phnom Penh is a national research university of Cambodia, located in the Phnom Penh capital. Established in 1960, it is the country's largest university. It hosts around 20,000 students in undergraduate and postgraduate programmes. </p>
                     <div class="vision_mission">
                         <div class="vision">
                             <img src="image/monitoring.png"><br><br>
