--- a/scholarship-project/rupp_uni.html
+++ b/scholarship-project/rupp_uni.html
@@ -44,7 +44,7 @@
                     <li><img src="image/RUPP.png" style="width: 80px;"></li>
                     <li>School Website<br><a href="http://www.rupp.edu.kh/">http://www.rupp.edu.kh/</a></li>
                     <li>Phone number<br>855-23-883-640</li>
-                    <li>Email<br>info@itc.edu.kh</li>
+                    <li>Email<br>secretary@rupp.edu.kh</li>
                     <li>Address<br><address><a href="https://www.google.com/maps/place/RUPP+(Royal+University+of+Phnom+Penh)/@11.5682919,104.89069,15z/data=!4m5!3m4!1s0x0:0x20138e822e434660!8m2!3d11.5682919!4d104.89069">Russian Federation Boulevard, Toul Kork, Phnom Penh, Cambodia.</a></address>
                     </li>
                 </ul>
@@ -63,15 +63,19 @@
                         <div class="vision">
                             <img src="image/monitoring.png"><br><br>
                             <b>VISION</b>
-                            <p>To be a leading institute in digital technology with excellent education to foster digital talents toward digital transformation.</p>
+                            <p>To become Cambodia's flagship university in teaching, research and community services
+                            </p>
                         </div>
                         <div class="mission">
                             <img src="image/target.png"/><br><br>
                             <b>MISSION</b>
-                            <ul>
-                                <li>Produce qualified digital talents with an equipped skill set to contribute to the development of digital government, economy and society</li>
-                                <li>Develop teaching and learning approaches and diverse education technology for sustainability</li>
-                                <li>Promote R & D activities from the early stage to young scholars. </li>
+                            <ul>In order to succeed in transforming the current RUPP into the flagship university of Cambodia, the mission points are as follows:
+                                <li>Building competency (knowledhe, skills, values, and attitudes) for students in all education and training programs and equipping them with entrepreneuship skills, innovation skills, cross-cultural competence, and employability skills</li>
+                                <li>Becoming center of excellence for language learning and information and communication technology (ICT)</li>
+                                <li>Becoming a leading institution for Social Science and Humanities and STEM (science, technology, engineering and mathematics) education </li>
+                                <li>Enhancing research and development in all graduate programs</li>
+                                <li>Becoming the leading institution for th eprovision of high quality research, consultancy and community service</li>
+                                <li>Becoming a center of good governance in which all administrative and financial services will be accountable, transparent, and participatory to students, staff members and stakeholders</li>
                             </ul>
                         
                         </div>
