--- a/scholarship-project/cadt_uni.html
+++ b/scholarship-project/cadt_uni.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Goedu Cambodia</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 <body>
     <div class="full-container">
@@ -39,9 +40,9 @@
             <h>Cambodia Academy of Digital Technology</h>
         </div>
         <div class="full_content">
-            <div class="shool_info">
+            <div class="w3-animate-left">
                 <ul>
-                    <li><img src="image/cadt_logo_n.png"></li>
+                    <li><img src="image/cadt_logo_n.png" style="width: 800px;"></li><br><br>
                     <li>School Website<br><a href="https://www.cadt.edu.kh/">https://www.cadt.edu.kh/</a></li>
                     <li>Phone number<br>010 340 000</li>
                     <li>Email<br>idt@cadt.edu.kh</li>
