--- a/scholarship-project/university_page.html
+++ b/scholarship-project/university_page.html
@@ -56,7 +56,7 @@
             </div>
             <div class="uni_box">
                 <div class="inside-unibox"><a href="techno_uni.html">
-                    <img src="image/techno_uni.jpg">
+                    <img src="image/techno-cover1.jpg">
                     <p>Institute of Technology Cambodia</p>
                 </a>
                 </div>
@@ -70,7 +70,7 @@
             </div>
             <div class="uni_box">
                 <div class="inside-unibox"><a href="npic_uni.html">
-                    <img src="image/npic-uni.jpg">
+                    <img src="image/npic_uni1.jpg">
                     <p>National Polytechnic Institute of Cambodia</p>
                     </a>
                 </div>
@@ -78,7 +78,7 @@
             <div class="uni_box">
                 <div class="inside-unibox"><a href="ntti_uni.html">
                     <img src="image/ntti-uni.jpg">
-                    <p>National Technical Training Institute (NTTI)</p>
+                    <p>National Technical Training Institute</p>
                     </a>
                 </div>
             </div>
@@ -91,7 +91,7 @@
             </div>
             <div class="uni_box">
                 <div class="inside-unibox"><a href="rufa_uni.html">
-                    <img src="image/rufa-uni.jpg">
+                    <img src="image/rufa-uni1.jpg">
                     <p>Royal University of Fine Arts</p>
                 </a>
                 </div>
