--- a/scholarship-project/Forgotpw_index.html
+++ b/scholarship-project/Forgotpw_index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> GOEDU CAMBODIA - Login</title>
+    <title> GOEDU CAMBODIA - Forgot Password</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -48,7 +48,7 @@
                     <button class="button-login"> Continue</button>
                 </div>
 
-                <p class="Below"> Already have an account? <span class="Log-in"> <a href="Login_index.html"> Login now </a> </span></p>
+                <p class="Below"> <strong> Already have an account?  </strong><span class="Log-in"> <a href="Login_index.html"> Login now </a> </span></p>
                 <p class="Policy"> GoEdu Cambodia @ 2022 All Rights Reserved </p>
                 
             </div>
