--- a/scholarship-project/index.html
+++ b/scholarship-project/index.html
@@ -43,10 +43,10 @@
                 
                 <div class="user">
                     <div class="button1">
-                        <button class="login"> Log in </button>
+                        <button class="login"> <a href="Login_index.html"> Log in </a>  </button>
                     </div>
                     <div class="button2">
-                        <button class="signup"> Sign up </button>
+                        <button class="signup"> <a href="Signup_index.html"> Sign up </a> </button>
                     </div>
                 </div>
               
