--- a/scholarship-project/Signup_index.html
+++ b/scholarship-project/Signup_index.html
@@ -5,29 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> GoEdu Cambodia/Login</title>
-    <link rel="stylesheet" href="Signup_style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="content">
 
         <div class="content-head">
             <div class="head-logo">
-                <img class="logo" src="Signup_images/goedu-logo.png">
+                <img class="logo" src="image/goedu.png">
             </div>
 
-            <div class="head-text"> 
-                <p> GoEdu Cambodia</p>
-            </div>
         </div>
 
-        <div class="content-box"> 
+        <div class="content-box-signup"> 
 
             <div class="container-body">
 
                 <div class="content-body-name"> 
                     <h1> Sign in </h1>
                 </div>
-                <div class="body-bottom-border"> </div>
+                <div class="body-bottom-border-signup"> </div>
 
                 <div class="body-informationfill">
                     <p> Given Name <span class="star"> * </span> </p>
@@ -52,7 +49,7 @@
 
                         <div class="fill-box">
                             <div class="flag">
-                                <img class="Cam-pic" src="Signup_images/Cambodia.png">
+                                <img class="Cam-pic" src="image/Cambodia.png">
                             </div>
                             
                             <div class="fill-text">
@@ -92,7 +89,7 @@
                     <button class="button-login"> Continue</button>
                 </div>
 
-                <p class="Below"> Already have an account? <span class="Log-in"> <a href="../Login/Login_index.html"> Login now </a> </span></p>
+                <p class="Below"> Already have an account? <span class="Log-in"> <a href="Login_index.html"> Login now </a> </span></p>
                 <p class="Policy"> GoEdu Cambodia @ 2022 All Rights Reserved </p>
                 
             </div>
